--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,8 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Contacto</title>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.0.min.js"></script>
+
     <style>
     *{
       padding: 0px;
@@ -20,15 +22,12 @@
         width: 15%;
 
       }
-      #titulo{
-        vertical-align: middle;
-      }
+
       #navbarSupportedContent{
-        margin-left: 40%;
+        margin-left: 10%;
       }
-      #pie{
-        margin-top: 30%;
-      }
+
+
       footer{
         clear: both;
         text-align: center;
@@ -42,8 +41,11 @@
       .contenido{
         max-width: 80%;
         margin: auto;
-        margin-top: 20%;
+        margin-top: 10%;
         text-align: center;
+      }
+      #contenido{
+        width: 100%;
       }
 
       .contacto{
@@ -101,67 +103,191 @@
 .pie .fa-instagram:hover{
   color: yellow;
 }
+#navbar{
+  height: 120px;
+}
+.icono{
+  margin-right: 2%;
+  margin-bottom: 3%;
+}
+#login{
+  margin-right: 20%;
+  margin-top: 3%;
+
+}
     </style>
+    <script type="text/javascript">
+
+
+        $(function(){
+
+      var
+      w       = 500,
+      h       = 700,
+      l       = (screen.availWidth - w) / 2,
+      t       = (screen.availHeight - h) / 2,
+      popPage = '.icono';
+
+      $(popPage).on('click',function(event){
+        window.open(this.href,"window","width= "+ w + ",height=" + h + ",left=" + l + ",top=" + t + ", scrollbars = yes, location = no, toolbar = no, menubar = no, status = no");
+         return false;
+      });
+
+    });
+
+        addEventListener('DOMContentLoaded',function(e){
+        //   function ponFoco(e){
+        //     e.target.style.outline = "blue solid 2px";
+        //
+        //   }
+        //
+        //   function quitaFoco(){
+        //     e.target.style.outline = "none";
+        //   }
+        // var inputs = document.getElementsByTagName('input');
+        // for (var i = 0; i < (inputs.length -1) ; i++) {
+        //   inputs[i].addEventListener('focus',ponFoco);
+        //   inputs[i].addEventListener('blur',quitaFoco);
+        // }
+
+        //validaciones del formulario
+
+        document.getElementById('formulario').addEventListener('submit',function(e){
+          e.preventDefault();
+
+          //campo para los errores
+
+          var error = document.getElementsByClassName('errores')[0];
+
+          //lista de errores
+           var lista = "";
+
+           // lo que devuelve cuando acabe la validaciones
+
+           var ret =  false;
+
+           // validamos el nombre
+
+           var nom = document.getElementById('nombre').value;
+           if ( !nom || !(/^\S+[\s?\S+]*$/.test(nom))){
+                lista += "El nombre es erróneo <br/>"
+                ret = false;
+           }
+
+           // validamos los apellidos
+           var apellidos = document.getElementById('apellidos').value;
+           if (apellidos == null || apellidos.length == 0 || !(/^\S+[\s?\S+]*$/.test(apellidos))){
+             ret = false;
+             lista += "Hay un error en los apellidos <br/>";
+           }
+
+           //validamos la empresa
+           var emp = document.getElementById('empresa').value;
+           if (emp == null || emp.length == 0 || !(/^\S+[\s?\S+]*$/.test(emp))){
+             ret = false;
+             lista += "Hay un error en el nombre de la empresa<br/>";
+           }
+                //validamos el email
+                var email = document.getElementById("email").value;
+                if ( ! (/^\w+([\.\-\+]?\w+)*@\w+([\.\-]?\w+)*(\.\w{2,4})+$/.test(email)) ){
+                  lista += "El email es incorrecto <br/>";
+                  ret = false;
+                }
+              //validamos el Telefono
+                var telefono = document.getElementById('telefono').value;
+                if( !(/^\d{9}$/.test(telefono)) ) {
+                 lista += "El telefono es incorrecto <br/>"
+                 ret = false;
+               }
+              if(ret){
+                document.getElementById('enviar').value = "Enviando..";
+                document.getElementById("enviar").disabled = true;
+                document.forms[0].submit();
+
+
+              }else{
+                error.style.color="red";
+                 error.innerHTML = lista;
+              }
+
+
+
+
+        });
+            });
+
+
+    </script>
   </head>
   <body>
     <div class="container-fluid">
     <div id="contenedor">
         <div class="row">
           <header class="menu w-100 position-fixed sticky-top">
-            <img id="logo" src="logo1.png" alt="Logotipo de la pagina web">
-            <a id="titulo" class="navbar-brand" href="#"><h1>JECDesign</h1></a>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
+                <img id="logo" src="logo1.png" alt="Logotipo de la pagina web">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
               </button>
 
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
+
                   <li class="nav-item">
-                    <a class="nav-link" href="QuienesSomos.html" id="navbarDropdown">Quienes Somos</a>
+                    <a class="nav-link" href="inicio.html" id="navbarDropdown">Inicio</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="quienesSomos.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Quienes Somos</a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="Eric.html">Eric</a>
+                        <a class="dropdown-item" href="Celia.html">Celia</a>
+
+                        <a class="dropdown-item" href="Javi.html">Javier</a>
+                      </div>
+                    </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="servicios.html">Servicios</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Servicios</a>
+                    <a class="nav-link" href="catalogo.html">Catalogo</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Catalogo</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Blog</a>
+                    <a class="nav-link disabled" href="blog.html">Blog</a>
                   </li>
               </ul>
           </div>
+          <a href="registro.html" class="icono"> <i class="fas fa-user fa-2x "  ></i></a>
+          
+
+
         </nav>
           </header>
         </div>
         <div class="contenido row pt-5">
             <div class="formulario col-xl-12 col-lg-9 col-md-9 col-sm-9">
               <h1>Solicita tu presupuesto</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <form>
+              <p> </p>
+              <form id="formulario" action="#" method="post" enctype="application/x-www-urlencoded">
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Nombre*">
+                  <input type="text"  class="form-control" id="nombre" autofocus="autofocus" placeholder="Nombre*">
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Apellidos*">
+                  <input type="text" class="form-control" placeholder="Apellidos*" id="apellidos">
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Empresa">
+                  <input type="text" class="form-control" placeholder="Empresa" id="empresa">
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Email*">
+                  <input type="text" class="form-control" placeholder="Email*" id="email">
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Telefono*">
+                  <input type="text" class="form-control" placeholder="Telefono*" id="telefono">
                 </div>
                 <div class="form-group">
-                  <textarea type="text" class="form-control" rows="5" placeholder="Explicanos tu proyecto*"></textarea>
+                  <textarea type="text" class="form-control" rows="5" placeholder="Explicanos tu proyecto*" id="texto"></textarea>
                 </div>
-                <button type="submit" class="col-lg-12 col-md-12 col-sm-12 col-12 btn btn-success">Enviar</button>
+                <button type="submit" class="col-lg-12 col-md-12 col-sm-12 col-12 btn btn-success" id="enviar">Enviar</button>
+                  <div class="errores"></div>
               </form>
             </div>
             <div class="contacto col-xl-12">
@@ -227,7 +353,9 @@
   </div>
 
     <!-- Inserta aquí los JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.0.min.js"></script>
+
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
